fix: scheme text alignment

--- a/_sass/go-jump.scss
+++ b/_sass/go-jump.scss
@@ -686,7 +686,7 @@ section.gifts {
       }
 
       > * {
-        margin-right: 2rem;
+        margin: 0 1rem;
       }
 
       img {
